# Pico-Ethernet-Radio

./: .gitmodules  CMakeLists.txt  README.md  ethernetif.c  freertos_hooks.c  main.c  player.c
audio/: CMakeLists.txt  audio_defs.h
audio/audio_i2s/: audio_i2s.c  audio_i2s.h  audio_i2s.pio
audio/decoder/: decoder.c  decoder.h
audio/player/: player.c
audio_i2s/: CMakeLists.txt  audio_i2s.h
drivers/: CMakeLists.txt
drivers/ENC28J60/: CMakeLists.txt  enc28j60.c  enc28j60.h  enc28j60_defs.h
event_manager/: CMakeLists.txt  event_manager.c  event_manager.h
gpio_irq/: CMakeLists.txt  gpio_irq.c  gpio_irq.h
ipc/: CMakeLists.txt  ipc_context.c  ipc_context.h  ipc_message.h  radio_state.c  radio_state.h
logger/: CMakeLists.txt  logger.c  logger.h
network/: CMakeLists.txt  network.c  network.h
network/connection/: connection.c  connection.h
network/enc28j60/: enc28j60.c  enc28j60.h
network/ethernetif/: ethernetif.c  ethernetif.h
network/server/: server.c  webpage.h
network/stream/: stream.c  stream.h
utils/: utils.h
